--- a/style/styles.css
+++ b/style/styles.css
@@ -14,8 +14,25 @@ h1 {
 }
 
 li {
-
     font-size: 60px;
-    line-height: 1.5;
+    line-height: 2;
     list-style: none;
+    
+}
+
+a {
+    text-decoration: none;
+    color: rgb(78, 69, 178);
+    background-color: rgb(208, 250, 250);
+}
+
+.recipe-name {
+
+    border: 5px solid rgb(78, 69, 178);
+    margin: 10px auto;
+    border-radius: 25px;
+    width: 800px;
+    display:block;
+    text-align: center;
+    background-color: rgb(208, 250, 250);
 }
